[gd_scene format=3]

[ext_resource type="Script" path="res://scripts/main/ModeSelect.gd" id="1"]

[node name="ModeSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.75, 0.3, 1)
theme_override_font_sizes/font_size = 48
text = "Select Mode"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="CardContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="ClassicCard" type="PanelContainer" parent="CenterContainer/VBoxContainer/CardContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(280, 200)

[node name="CardVBox" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CardContainer/ClassicCard"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ClassicNameLabel" type="Label" parent="CenterContainer/VBoxContainer/CardContainer/ClassicCard/CardVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Classic"
horizontal_alignment = 1

[node name="ClassicDescriptionLabel" type="Label" parent="CenterContainer/VBoxContainer/CardContainer/ClassicCard/CardVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "30 waves of increasing difficulty. Build, maze, and survive."
horizontal_alignment = 1
autowrap_mode = 2

[node name="ClassicLockLabel" type="Label" parent="CenterContainer/VBoxContainer/CardContainer/ClassicCard/CardVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.3, 0.3, 1)
text = ""
horizontal_alignment = 1

[node name="ClassicSelectButton" type="Button" parent="CenterContainer/VBoxContainer/CardContainer/ClassicCard/CardVBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "Select"

[node name="DraftCard" type="PanelContainer" parent="CenterContainer/VBoxContainer/CardContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(280, 200)

[node name="CardVBox" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CardContainer/DraftCard"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="DraftNameLabel" type="Label" parent="CenterContainer/VBoxContainer/CardContainer/DraftCard/CardVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Draft"
horizontal_alignment = 1

[node name="DraftDescriptionLabel" type="Label" parent="CenterContainer/VBoxContainer/CardContainer/DraftCard/CardVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Start with 1 random element. Draft 2 more across 10 waves."
horizontal_alignment = 1
autowrap_mode = 2

[node name="DraftLockLabel" type="Label" parent="CenterContainer/VBoxContainer/CardContainer/DraftCard/CardVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.3, 0.3, 1)
text = "Requires 500 XP"
horizontal_alignment = 1

[node name="DraftSelectButton" type="Button" parent="CenterContainer/VBoxContainer/CardContainer/DraftCard/CardVBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "Select"

[node name="EndlessCard" type="PanelContainer" parent="CenterContainer/VBoxContainer/CardContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(280, 200)

[node name="CardVBox" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CardContainer/EndlessCard"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="EndlessNameLabel" type="Label" parent="CenterContainer/VBoxContainer/CardContainer/EndlessCard/CardVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Endless"
horizontal_alignment = 1

[node name="EndlessDescriptionLabel" type="Label" parent="CenterContainer/VBoxContainer/CardContainer/EndlessCard/CardVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Waves never stop. How far can you go?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="EndlessLockLabel" type="Label" parent="CenterContainer/VBoxContainer/CardContainer/EndlessCard/CardVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.3, 0.3, 1)
text = "Requires 2000 XP"
horizontal_alignment = 1

[node name="EndlessSelectButton" type="Button" parent="CenterContainer/VBoxContainer/CardContainer/EndlessCard/CardVBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "Select"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(280, 50)
text = "Back"
